# rankr

./: .env.example  .gitignore  LICENSE  README.md  country_names.json  crawl.py  db_init.py  db_institutions.py  db_populate.py  db_rankings.py  docker-compose.http.yml  docker-compose.prod.yml  docker-compose.yml  entities.json  main.py  matches.json  metrics.json  pyproject.toml  qs_urls.json  rankings.json  run_tasks.py  shanghai_urls.json  the_urls.json
backend/: .dockerignore  .gitignore  LICENSE  README.md  alembic.ini  backend.dockerfile  main.py  pyproject.toml  setup.cfg
backend/cli/commands/: cmd_crawl.py  cmd_db.py  cmd_flake8.py  cmd_pytest.py  cmd_start.py
backend/cli/commands/db/: db_grid.py  db_init.py  db_rankings.py
backend/config/: __init__.py  app_config.py  backend_config.py  base_config.py  crawler_config.py  db_config.py  enums.py  meta.py
backend/crawlers/: __init__.py  crawler_mixin.py  qs_crawler.py  shanghai_crawler.py  the_crawler.py  wikipedia_crawler.py
backend/crawlers/tests/: test_wikipedia_crawler.py
backend/essentials/: countries.csv  country_names.json  matches.json  qs_urls.json  rankings.json  shanghai_urls.json  the_urls.json
backend/rankr/api/: deps.py  server.py  tasks.py
backend/rankr/api/dependencies/: __init__.py  database.py  entities.py
backend/rankr/api/v1/: __init__.py
backend/rankr/api/v1/endpoints/: __init__.py  entity.py  ranking.py
backend/rankr/api/v1/routers/: __init__.py  entity.py  healthcheck.py  institution.py  ranking.py  search.py
backend/rankr/crawlers/: __init__.py  crawler_mixin.py  grid_crawler.py  offline_crawler.py  qs_crawler.py  shanghai_crawler.py  the_crawler.py
backend/rankr/crud/: __init__.py  country_process.py  entity.py  institution_process.py  metrics_process.py  ranking.py  ranking_process.py
backend/rankr/db_models/: __init__.py  acronym.py  alias.py  base.py  country.py  institution.py  label.py  link.py  ranking.py  type.py
backend/rankr/migrations/: env.py
backend/rankr/migrations/versions/: 36c8be00fbf4_first_migration.py
backend/rankr/repos/: __init__.py  acronym.py  acronym_repo.py  alias.py  alias_repo.py  base.py  base_repo.py  country.py  country_repo.py  institution.py  institution_repo.py  label.py  label_repo.py  link.py  link_repo.py  ranking.py  ranking_repo.py  type.py  type_repo.py
backend/rankr/schemas/: __init__.py  acronym.py  alias.py  core.py  country.py  entity.py  institution.py  label.py  link.py  ranking.py  ranking_table.py  search.py  type.py  validators.py
backend/rankr/tests/entity/: test_entity.py
backend/tests/crawlers/: test_crawler_mixin.py
backend/tests/rankr/: conftest.py
backend/tests/rankr/entity/: test_entity.py
backend/tests/rankr/ranking/: test_ranking.py
backend/tests/rankr/utils/: __init__.py  overrides.py
backend/utils/: __init__.py  get_json.py  group_by.py  redis_cache_key_builder.py  text_process.py
cli/: cli.py
config/: __init__.py  app_config.py  base_config.py  config.py  crawler_config.py  db_config.py
crawlers/: __init__.py  crawler_mixin.py  qs_crawler.py  run_tasks.py  shanghai_crawler.py  the_crawler.py  wikipedia_crawler.py
essentials/: country_names.json  matches.json  qs_urls.json  the_urls.json
frontend/: .dockerignore  README.md  frontend.dockerfile  package-lock.json  package.json  robots.txt  sitemap.txt
rankr/: enums.py
utils/: __init__.py  country_names.py  csv_export.py  csv_size.py  fuzzy_matcher.py  get_csv.py  get_row.py  group_by.py  metrics_process.py  (+6 more)
(+117 files in other folders)
