[tool.poetry]
name = "ranker"
version = "0.1.0"
description = "Scripts for crawling academic ranking websites"
authors = ["Pooria Soltani <pooria.ms@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.1"
environs = "^8.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
