[tool.poetry]
name = "ranker"
version = "0.1.0"
description = "Scripts for crawling academic ranking websites"
authors = ["Pooria Soltani <pooria.ms@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.1"
environs = "^8.0.0"
lxml = "^4.5.2"
requests_html = "^0.10.0"
sqlalchemy = "^1.3.18"
alembic = "^1.4.2"
fastapi = "^0.60.1"
uvicorn = "^0.11.7"
psycopg2 = "^2.8.5"
sqlalchemy-utils = "^0.36.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"

[tool.black]
line-length = 80
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
