[tool.poetry]
name = "rankr"
version = "0.1.0"
description = "A platform for aggregating different academic rankings."
authors = ["Pooria Soltani <pooria.ms@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pmsoltani/rankr"
repository = "https://github.com/pmsoltani/rankr"
documentation = "https://github.com/pmsoltani/rankr"

keywords = ["university-ranking", "ranking-systems", "grid"]

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Topic :: Education",
  "Typing :: Typed"
]

[tool.poetry.scripts]
rankr = "cli.cli:cli"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
beautifulsoup4 = "^4.9.1"
sqlalchemy = "^1.4.22"
alembic = "^1.4.2"
fastapi = "^0.68.1"
uvicorn = "^0.11.7"
psycopg2 = "^2.8.5"
SQLAlchemy-Utils = "^0.37.8"
furl = "^2.1.0"
tqdm = "^4.48.2"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
typer = {extras = ["all"], version = "^0.3.2"}
pydantic = {extras = ["dotenv"], version = "^1.6.1"}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
pytest = "^6.0.1"
pytest-cov = {extras = ["toml"], version = "^2.10.1"}
devtools = {extras = ["pygments"], version = "^0.6"}

[tool.coverage.run]
omit = [".venv/*"]

[tool.black]
line-length = 80
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
